# nlp_npu_running

./: README.md  compare_txt.py  compare_txt2.py  count.py  data_proc.py  n_lstm.py  process_test.py
loop_test/: CMakeLists.txt  README.md  test_onDiffDev.sh
loop_test/builds/android/: CMakeCache.txt  Makefile  cmake_install.cmake
loop_test/src/: Threadpool.hpp  main.cpp  tool.hpp
